--- a/src/gui/FaceDetection.form
+++ b/src/gui/FaceDetection.form
@@ -31,7 +31,7 @@
               <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
-              <Component id="mainWindowPanel" max="32767" attributes="0"/>
+              <Component id="webcamImagePanel" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -39,7 +39,7 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="mainWindowPanel" min="-2" max="-2" attributes="0"/>
+              <Component id="webcamImagePanel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="startButton" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -51,7 +51,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="mainWindowPanel">
+    <Container class="javax.swing.JPanel" name="webcamImagePanel">
 
       <Layout>
         <DimensionLayout dim="0">
